tests/rosetta/out/Smalltalk/blum-integer.out
/workspace/mochi/tests/rosetta/out/Smalltalk/blum-integer.st:73: parse error, expected '|' or identifier
